// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate maps and search configuration does not add any geo configuration if no maps or search is added 1`] = `
{
  "UserAgent": "aws-amplify-cli/2.0",
  "Version": "1.0",
}
`;

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources with Region as CFN output 1`] = `
{
  "UserAgent": "aws-amplify-cli/2.0",
  "Version": "1.0",
  "geo": {
    "plugins": {
      "awsLocationGeoPlugin": {
        "maps": {
          "default": "defaultMap12345",
          "items": {
            "defaultMap12345": {
              "style": "VectorEsriStreets",
            },
            "map12345": {
              "style": "VectorEsriStreets",
            },
          },
        },
        "region": "eu-west-1",
        "searchIndices": {
          "default": "defaultIndex12345",
          "items": [
            "index12345",
            "defaultIndex12345",
          ],
        },
      },
    },
  },
}
`;

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources without Region CFN output 1`] = `
{
  "UserAgent": "aws-amplify-cli/2.0",
  "Version": "1.0",
  "geo": {
    "plugins": {
      "awsLocationGeoPlugin": {
        "maps": {
          "default": "defaultMap12345",
          "items": {
            "defaultMap12345": {
              "style": "VectorEsriStreets",
            },
            "map12345": {
              "style": "VectorEsriStreets",
            },
          },
        },
        "region": "us-west-2",
        "searchIndices": {
          "default": "defaultIndex12345",
          "items": [
            "index12345",
            "defaultIndex12345",
          ],
        },
      },
    },
  },
}
`;
